# subway-builder-rmsp

./: .env.example  .gitignore  CLAUDE.md  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
docker/: tools.Dockerfile
mod/: index.js  manifest.json
pipeline/: 01_extract.sh  02_roads.py  03_buildings.py  04_water.py  05_airports.py  06_demand.py  07_tiles.sh  08_routes.sh  config.py  install.sh  lib_geojsonseq.py  play.sh  route_paths.py  serve_tiles.sh  simplify_paths.py  validate.py
src/rmsp/: __init__.py  __main__.py  cli.py  config.py  demand.py  demand_filter.py  depot_patch.py  external.py  generate.py  geojson.py  install.py  layers.py  publish.py  routing.py  sources.py  specials.py  subpoints.py  tiles.py  validate.py
tests/: test_pure.py
